--- a/index.html
+++ b/index.html
@@ -5,33 +5,70 @@
   <title>Smart Aquarium Control</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      font-family: 'Courier New', monospace;
+      background: linear-gradient(135deg, #2e004f, #000000);
+      background-attachment: fixed;
+      background-repeat: no-repeat;
+      background-size: cover;
+      color: #00ffcc;
       text-align: center;
-      padding: 20px;
+      padding-top: 20px;
+      padding: 20px 16px;
     }
-    h1 {
-      margin-bottom: 20px;
+    h1, h2 {
+      color: #ff00cc;
+      text-shadow: 2px 2px #000;
     }
     .card {
-      background-color: #fff;
+      background-color: #111;
+      border: 3px solid #00ffcc;
       padding: 20px;
-      margin: 10px auto;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      max-width: 400px;
+      margin: 15px auto;
+      border-radius: 15px;
+      box-shadow: 0 0 10px #00ffcc;
+      max-width: 500px;
+      width: 100%;
+      box-sizing: border-box;
     }
     input, button, select {
       width: 90%;
-      padding: 10px;
+      padding: 12px;
       margin: 10px 0;
       font-size: 16px;
+      font-family: 'Courier New', monospace;
+      background-color: #222;
+      color: #00ffcc;
+      border: 2px solid #00ffcc;
+      border-radius: 8px;
+    }
+    input::placeholder {
+      color: #999;
+    }
+    button:hover {
+      background-color: #00ffcc;
+      color: #000;
+      cursor: pointer;
     }
     .controls {
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+    .controls button {
+      margin: 5px 0;
+    }
+    @media (max-width: 480px) {
+      h1, h2 {
+        font-size: 1.4em;
+      }
+
+      input, button {
+        font-size: 14px;
+      }
     }
   </style>
 </head>
@@ -123,4 +160,3 @@
   </script>
 </body>
 </html>
-
