--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
   </style>
 </head>
 <body>
-  <h1>Smart Aquarium Control</h1>
+  <!-- <h1>Smart Aquarium</h1> -->
 
   <div id="configForm" class="card">
-    <h2>Firebase Config</h2>
+    <h2>Smart Aquarium</h2>
     <input type="text" id="apiKey" placeholder="API Key" required />
     <input type="text" id="databaseURL" placeholder="Database URL" required />
     <input type="email" id="userEmail" placeholder="Email" required />
