--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
   </div>
 
   <div id="dashboard" class="card" style="display:none;">
-    <h2>Status</h2>
+    <h2>Dashboard</h2>
+    <h2>Smart Aquarium</h2>
     <p>Suhu: <span id="suhu">-</span> °C</p>
     <p>Sisa Pakan: <span id="pakan">-</span>%</p>
     <p>Suhu Maksimum: <span id="setSuhu">-</span>°C</p>
