--- a/main.html
+++ b/main.html
@@ -7,47 +7,6 @@
   <link rel="icon" href="assets/img/icon.png" type="image/png">
   <link rel="stylesheet" href="assets/css/styles.css" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-  <style>
-    .tab-section { display: none; }
-    .tab-section.active { display: block; }
-
-    .akun-card {
-      background: white;
-      border-radius: 15px;
-      padding: 25px;
-      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.08);
-      text-align: left;
-      max-width: 600px;
-      margin: 0 auto;
-    }
-    .akun-card h3 {
-      margin-bottom: 20px;
-      text-align: center;
-    }
-    .akun-info p {
-      margin-bottom: 15px;
-      color: #333;
-      font-size: 0.95rem;
-    }
-    .akun-info i {
-      margin-right: 5px;
-    }
-    .logout-btn {
-      display: block;
-      margin: 20px auto 0;
-      background: #4a90e2;
-      color: white;
-      padding: 12px 20px;
-      border: none;
-      border-radius: 8px;
-      font-weight: 600;
-      cursor: pointer;
-      text-align: center;
-    }
-    .logout-btn i {
-      margin-right: 6px;
-    }
-  </style>
 </head>
 <body>
   <div class="header">
@@ -62,7 +21,7 @@
     <!-- KAMERA SECTION -->
     <div id="kameraTab" class="tab-section">
       <div class="camera-card">
-        <h3 style="margin-bottom: 16px; color:#444;">Pemantauan Visual</h3>
+        <h3 style="margin-bottom: 16px; color:#444;">Live Monitoring</h3>
 
         <div class="fake-camera-screen">
           <div class="overlay">
@@ -72,7 +31,7 @@
         </div>
 
         <p style="color:#666; margin-top: 18px;">
-          Kamera akan membantu Anda memantau aktivitas ikan, pencahayaan, dan kebersihan akuarium secara langsung. Pantau dari mana saja untuk memastikan kondisi tetap optimal.
+          Fitur Live Monitoring memungkinkan Anda memantau kondisi akuarium secara langsung melalui kamera. Pantau aktivitas ikan, pencahayaan, dan kebersihan air dari mana saja secara real-time untuk menjaga lingkungan akuarium tetap optimal dan nyaman bagi penghuni air Anda.
         </p>
       </div>
     </div>
@@ -98,6 +57,17 @@
         </button>
       </div>
 
+      <div class="temperature-control">
+        <div class="suhu-display-above">Suhu Maks: <span id="setSuhuDisplay">--</span>°C</div>
+        <div class="slider-container">
+          <input type="range" min="20" max="40" value="31" class="temp-slider" id="tempSlider">
+          <button class="set-btn" onclick="setTemperature()">SET</button>
+        </div>
+        <div id="tempPreview" class="temp-preview" style="display: none;">
+          Kipas akan menyala otomatis saat suhu mencapai: <span id="tempValue">--</span>°C
+        </div>
+      </div>
+
       <div class="controls-section">
         <h3 class="controls-title">Kontrol Perangkat</h3>
         <div class="switch-grid">
@@ -115,16 +85,19 @@
               <span class="slider"></span>
             </label>
           </div>
-        </div>
-
-        <div class="temperature-control">
-          <div class="suhu-display-above">Suhu Maks: <span id="setSuhuDisplay">--</span>°C</div>
-          <div class="slider-container">
-            <input type="range" min="20" max="40" value="31" class="temp-slider" id="tempSlider">
-            <button class="set-btn" onclick="setTemperature()">SET</button>
+          <div class="switch-item inactive">
+            <span class="switch-label">Saklar 3 (Belum Aktif)</span>
+            <label class="switch">
+              <input type="checkbox" id="saklar3Switch" disabled>
+              <span class="slider"></span>
+            </label>
           </div>
-          <div id="tempPreview" class="temp-preview" style="display: none;">
-            Set: <span id="tempValue">--</span>°C
+          <div class="switch-item inactive">
+            <span class="switch-label">Saklar 4 (Belum Aktif)</span>
+            <label class="switch">
+              <input type="checkbox" id="saklar4Switch" disabled>
+              <span class="slider"></span>
+            </label>
           </div>
         </div>
       </div>
@@ -153,8 +126,8 @@
 
   <div class="bottom-nav">
     <a href="#" class="nav-item" onclick="switchTab('kameraTab', this)">
-      <i class="fas fa-camera"></i>
-      <span>Kamera</span>
+      <i class="fas fa-video"></i>
+      <span>Live Monitoring</span>
     </a>
     <a href="#" class="nav-item" onclick="switchTab('dashboardTab', this)">
       <i class="fas fa-tachometer-alt"></i>
@@ -387,11 +360,69 @@
       }
     }
 
+    function updateSwitchItemWidths() {
+      const items = document.querySelectorAll('.switch-item');
+      const total = items.length;
+      const screenWidth = window.innerWidth;
+      let perRow;
+
+      if (total === 1) {
+        perRow = 1;
+      } else if (screenWidth >= 1024 && total % 4 === 0) {
+        perRow = 4;
+      } else {
+        perRow = 2;
+      }
+
+      const percent = 100 / perRow;
+
+      items.forEach(item => {
+        item.style.flex = `1 1 calc(${percent}% - 15px)`;
+        item.style.maxWidth = `calc(${percent}% - 15px)`;
+      });
+    }
+
+    function updateSwitchGridClass() {
+      const grid = document.querySelector('.switch-grid');
+      const itemCount = document.querySelectorAll('.switch-item').length;
+
+      if (window.innerWidth >= 1024 && itemCount % 4 === 0) {
+        grid.classList.add('columns-4');
+      } else {
+        grid.classList.remove('columns-4');
+      }
+    }
+
+    window.addEventListener('load', () => {
+      const activeTab = document.querySelector('.tab-section.active');
+      if (activeTab) {
+        const tabId = activeTab.id;
+        const navItems = document.querySelectorAll('.bottom-nav .nav-item');
+        
+        navItems.forEach(item => {
+          const onclickAttr = item.getAttribute('onclick');
+          if (onclickAttr && onclickAttr.includes(tabId)) {
+            item.classList.add('active');
+          } else {
+            item.classList.remove('active');
+          }
+        });
+      }
+    });
+
+    window.addEventListener('load', updateSwitchGridClass);
+    window.addEventListener('resize', updateSwitchGridClass);
+
     function switchTab(tabId, element) {
-      document.querySelectorAll('.tab-section').forEach(s => s.classList.remove('active'));
+      document.querySelectorAll('.tab-section').forEach(tab => {
+        tab.classList.remove('active');
+      });
+
       document.getElementById(tabId).classList.add('active');
 
-      document.querySelectorAll('.bottom-nav .nav-item').forEach(i => i.classList.remove('active'));
+      document.querySelectorAll('.bottom-nav .nav-item').forEach(nav => {
+        nav.classList.remove('active');
+      });
       element.classList.add('active');
     }
   </script>
