--- a/dashboard.html
+++ b/dashboard.html
@@ -73,28 +73,28 @@
         <h3 class="controls-title">Kontrol Perangkat</h3>
         <div class="switch-grid">
           <div class="switch-item">
-            <span class="switch-label">Saklar 1 (Lampu)</span>
+            <span class="switch-label">Saklar 1 - Lampu</span>
             <label class="switch">
               <input type="checkbox" id="lampuSwitch" onchange="toggleDevice('lampu', this)">
               <span class="slider"></span>
             </label>
           </div>
           <div class="switch-item">
-            <span class="switch-label">Saklar 2 (Kipas)</span>
+            <span class="switch-label">Saklar 2 - Kipas</span>
             <label class="switch">
               <input type="checkbox" id="kipasSwitch" onchange="toggleDevice('kipas', this)">
               <span class="slider"></span>
             </label>
           </div>
           <div class="switch-item inactive">
-            <span class="switch-label">Saklar 3 (Belum Aktif)</span>
+            <span class="switch-label">Saklar 3 - Belum Aktif</span>
             <label class="switch">
               <input type="checkbox" id="saklar3Switch" disabled>
               <span class="slider"></span>
             </label>
           </div>
           <div class="switch-item inactive">
-            <span class="switch-label">Saklar 4 (Belum Aktif)</span>
+            <span class="switch-label">Saklar 4 - Belum Aktif</span>
             <label class="switch">
               <input type="checkbox" id="saklar4Switch" disabled>
               <span class="slider"></span>
